can-socket/tests/compile-fail/can_id_too_high2.rs
fn main() {
	let _id = can_socket::id!(base: 0x800);
}
